# agentgym

./: .gitignore  AGENTGYM_PRD.md  README.md  pyproject.toml
docs/: failure_modes.md  methodology.md  python_api_task_template.md  task_authoring.md  v0.1_report.md  v0.2_report.md
src/agentgym/: __init__.py  cli.py  runner.py  tasks.py
tasks/python-api-001/: README.md  setup.sh  solution.patch  task.yaml
tasks/python-api-001/hidden_tests/: test_hidden_profiles.py
tasks/python-api-001/repo/: pyproject.toml
tasks/python-api-001/tests/: test_public_profiles.py
tasks/python-api-002/: README.md  setup.sh  solution.patch  task.yaml
tasks/python-api-002/hidden_tests/: test_hidden_notifications.py
tasks/python-api-002/repo/: pyproject.toml
tasks/python-api-002/tests/: test_public_notifications.py
tasks/python-api-003/: README.md  score.sh  setup.sh  solution.patch  task.yaml
tasks/python-api-003/repo/: pyproject.toml
tasks/python-api-003/repo/src/account_api/: __init__.py  accounts.py
tasks/python-api-004/: README.md  setup.sh  solution.patch  task.yaml
tasks/python-api-005/: README.md  setup.sh  solution.patch  task.yaml
tasks/python-api-006/: README.md  setup.sh  solution.patch  task.yaml
tasks/python-api-007/: README.md  setup.sh  solution.patch  task.yaml
tasks/python-api-008/: README.md  setup.sh  solution.patch  task.yaml
tasks/python-api-009/: README.md  score.sh  setup.sh  solution.patch  task.yaml
tasks/python-api-010/: README.md  setup.sh  solution.patch  task.yaml
tests/: __init__.py  test_cli.py  test_runner.py  test_tasks.py
(+41 files in other folders)
