[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "account-api"
version = "0.1.0"
description = "Synthetic AgentGym task repository for account API cross-field validation."
requires-python = ">=3.11"

[tool.setuptools.packages.find]
where = ["src"]
